--- a/style.css
+++ b/style.css
@@ -27,3 +27,8 @@ header{
 .happy-font{
     font-family: 'Poppins', sans-serif;
 }
+/* frequently ask question part  */
+.frequently-img{
+    width:430px;
+    height: 423px;
+}
