--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
 header{
     background: #264653;
 }
@@ -25,7 +29,7 @@ header{
     height: 150px;
 }
 .happy-font{
-    font-family: 'Poppins', sans-serif;
+    
 }
 /* frequently ask question part  */
 .frequently-img{
